Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,28 +1,51 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <title>Calculator Angular js</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body ng-app="Calculator">    <!--ng-app is directive-->
-<div ng-controller="CalculatorController">
-    <span>{{message}}</span>
-    <div class="theme-calculator">
-        <div ng-controller="DisplayController" display-panel></div>
-        <div ng-controller="ButtonController" button-panel></div>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Calculator-angularjs : Calculator in Angularjs" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Calculator-angularjs</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/nehachaudhary/calculator-angularjs">View on GitHub</a>
+
+          <h1 id="project_title">Calculator-angularjs</h1>
+          <h2 id="project_tagline">Calculator in Angularjs</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/nehachaudhary/calculator-angularjs/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/nehachaudhary/calculator-angularjs/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
 
-</div>
-<script type="application/javascript" src="js/libs/angular.js"></script>
-<script type="application/javascript" src="js/app.js"></script>
-<script type="application/javascript" src="js/helper.js"></script>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>Calculator in Angularjs</p>
 
-<script type="application/javascript" src="js/calculator/calculatorcontroller.js"></script>
-<script type="application/javascript" src="js/buttondata.js"></script>
+<p><a href="http://nehachaudhary.github.io/calculator-angularjs">http://nehachaudhary.github.io/calculator-angularjs</a></p>
+      </section>
+    </div>
 
-<script type="application/javascript" src="js/display/displaycontroller.js"></script>
-<script type="application/javascript" src="js/display/displaydirective.js"></script>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Calculator-angularjs maintained by <a href="https://github.com/nehachaudhary">nehachaudhary</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-<script type="application/javascript" src="js/button/buttoncontroller.js"></script>
-<script type="application/javascript" src="js/button/buttondirective.js"></script>
-</body>
+    
+
+  </body>
 </html>
