use ng-model for 2-way data binding

--- a/displayPanel.html
+++ b/displayPanel.html
@@ -1,1 +1,1 @@
-<input type="text" readonly class="js-display-band theme-display-band" value="{{displayValue}}">
+<input type="text" readonly class="js-display-band theme-display-band" ng-model="displayValue">
