use ng-bind in place of {{}}

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body ng-app="Calculator">    <!--ng-app is directive-->
 <div calculator class="theme-calculator">
-    <span>{{message}}</span>
+    <span ng-bind="message"></span>
 </div>
 
 <script type="application/javascript" src="js/libs/angular.js"></script>
